--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -125,7 +125,53 @@
    "id": "3d7bf1dc-c847-4717-983c-7825d10aab2a",
    "metadata": {},
    "source": [
-    "__Return:__ A return statement in a function is an optional statement that exists the f"
+    "__Return:__ A return statement in a function is an optional statement that exists the function and returns a value to the program, outside of the blovk of the function. Any code following the return statements is _not_ executed. If a function doesn't have a return statement, or if no return value is specified, the function returns as _undefined_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "37522248-925f-4588-a1e2-a8d6b633cab2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function sum(a, b){\n",
+    "    return a +b ;\n",
+    "8\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee042e6a-fbd0-4777-9820-463b29f0cbb6",
+   "metadata": {},
+   "source": [
+    "In the function abpve we are utilizing 2 parameters and simply adding 2 numbers. A and B. We are then returning the value out of the function. However please note that functions need to have more than a definition which is seen above. We now need to _call_ the function, in order to utilize it is 8."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92f6f323-4aa6-4b43-b113-527d4b042be8",
+   "metadata": {},
+   "source": [
+    ">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c2706cd-000c-4388-8216-cadadd2a2789",
+   "metadata": {},
+   "source": [
+    "# Calling a Function\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7663e722-2cea-4335-922a-0367416b9c6a",
+   "metadata": {},
+   "source": [
+    "__Function Call:__ A function call is when you "
    ]
   }
  ],
